wwr/styles/rafting.css
:root {
    --primary-color: #241675;
    /* deep logo blue */
    --secondary-color: #4DA8DA;
    /* lighter water blue */
    --accent1-color: #1B5E20;
    /* river/nature green */
    --accent2-color: #C8E6C9;
    /* bright highlight (life jacket yellow) */
    --heading-font: "Georgia", serif;
    --body-font: "Garamond", serif;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: var(--body-font);
    color: #000;
}

header {
    width: 840px;
    margin: 0 auto;
    background-color: var(--secondary-color);
    display: grid;
    grid-template-columns: auto 1fr;
    align-items: center;
}

main,
footer {
    width: 840px;
    margin: 0 auto;
}

footer {
    color: var(--primary-color);
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    align-items: center;
    background-color: var(--secondary-color);
    margin-bottom: 15px;
}

footer .socialmedia {
    display: flex;
    justify-content: flex-end;
}

footer .socialmedia a {
    text-decoration: none;
    margin-left: 10px;
}

footer .socialmedia img {
    width: 50px;
    height: auto;
}

footer p {
    grid-column: 2;
    text-align: center;
}

.hero,
.history,
section {
    background-color: var(--secondary-color);
    margin-bottom: 15px;
}

h1,
h2 {
    font-family: var(--heading-font);
    color: #000;
}

header img {
    margin-left: 30px;
    margin-bottom: 10px;
    max-width: 175px;
    height: auto;
}

header nav {
    margin: 50px;
    padding: 8px;
    display: flex;
    justify-content: flex-end;
}

header nav a {
    text-decoration: none;
    color: black;
    padding: 8px 16px;
    border: 1px solid black;
    text-align: center;
    background-color: white;
    font-size: 1.7rem;
}

nav,
p,
article {
    margin: 16px;
    padding: 8px;
}

.hero {
    position: relative;
}

.hero img {
    display: block;
    width: 100%;
    height: auto;
}

.hero article {
    position: absolute;
    top: 40px;
    left: 20px;
    right: 20px;
    background-color: var(--accent2-color);
    padding: 2px;
}

.hero h1 {
    position: absolute;
    top: 0px;
    width: 100%;
    opacity: 0.8;
    padding: 10px;
    text-align: center;

    background-color: var(--accent1-color);
    color: #fff;
}

.hero article img {
    float: right;
    width: 125px;
}

.history {
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    align-items: center;
    padding-top: 5px;
    padding-bottom: 20px;
}

.history h2 {
    grid-column: 1/4;
    text-align: center;
}

.history img {
    width: 200px;
    height: auto;
    padding: 5px;
}

.adventures {
    padding: 20px;
}

.adventures h2 {
    text-align: center;
    margin-bottom: 20px;
}

.adventure-gallery {
    display: flex;
    justify-content: space-between;
    gap: 10px;
}

.adventure-gallery figure {
    flex: 1;
    text-align: center;
    margin: 0;
}

.adventure-gallery img {
    width: 100%;
    max-width: 150px;
    height: 100px;
    /* I would do height: auto;... but Big Mallard is the only image with a different aspect ratio. So I am okay with it stretching a little bit */
}

.adventure-gallery figcaption {
    margin-top: 5px;
    font-size: 0.9rem;
}

